--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
             <p>
                 You can view my coding projects on my GitHub profiel here:
                 <br>
-                <p class="center"><a href="https://github.com/the-tech-academy"
+                <p class="center"><a href="https://github.com/richardbradleyj"
                 target="_blank">The Tech Academy Github</a></p>
             </p>
         </div>
         <!--Richt Column-->
         <div class="Coumn_2">
-            <a href="https://github.com/the-tech-academy" target="_blank"><img src="images/GitHub.png" alt="GitHub logo"></a>
+            <a href="https://github.com/richardbradleyj" target="_blank"><img src="images/GitHub.png" alt="GitHub logo"></a>
         </div>
     </div>
         <!--contact section-->
