--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!--github-->
     <div class="Row" id="GitHub">
         <!--Left column-->
-        <div class="Colum_1">
+        <div class="Columm_1">
             <h1>GitHub</h1>
             <p>
                 You can view my coding projects on my GitHub profiel here:
@@ -70,8 +70,8 @@
                 target="_blank">The Tech Academy Github</a></p>
             </p>
         </div>
-        <!--Richt Column-->
-        <div class="Coumn_2">
+        <!--Right Column-->
+        <div class="Column_2">
             <a href="https://github.com/richardbradleyj" target="_blank"><img src="images/GitHub.png" alt="GitHub logo"></a>
         </div>
     </div>
