--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!--github-->
     <div class="Row" id="GitHub">
         <!--Left column-->
-        <div class="Columm_1">
+        <div class="Column_1">
             <h1>GitHub</h1>
             <p>
                 You can view my coding projects on my GitHub profiel here:
