--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <!--nav bar-->
         <div class="navbar">
             <a class="active" href="#Home">Home</a>
+            <a href="#Slideshow">Slideshow</a>
             <a href="#About">About</a>
             <a href="#GitHub">GitHub</a>
-            <a href="#contact">Contact</a>
+            <a onclick="openForm()" ondblclick="CloseForm()">Contact</a>
         </div>
     <!---- Breadks inserted to add space between navbar and the first heading-->
-        <br>
-        <br>
+
     <!--Background video -->
     <div id="home">
         <video autoplay muted loop id="Typing_Video">
@@ -38,10 +38,54 @@
                     </q>
                     <br>-Joseph Weizenbaum
                     <br>
+                    My name is Richard. Welcome to my portfoloio website. On it, I will tell you about my background and experience.
+                    <br>
                     <br> Thanks for stopping by and ennjoy!
                 </p>
             </strong>
          </div>
+    <!--slide show section-->
+    <div id="Slideshow">
+        <div id="Slideshow_Background">
+            <div id="Slideshow_Container">
+                <div class="mySlides fade">
+                    <img class="Slideshow_Images" src="images/moose.jpg" alt="Picture of me">
+                    <div class="text">I'm available to assist you on your project!</div>
+                </div>
+                <div class="mySlides fade">
+                    <img class="Slideshow_Images" src="images/JavaScript.jpg" alt="HTML, CSS, AND JS logos">
+                    <div class="text">I am a Cybersecurity software developer,<br> trained in:<br>Front end and Back end security</div>
+                </div>
+                <div class="mySlides fade">
+                    <img class="Slideshow_Images" src="images/Python.jpg" alt="Python logo">
+                    <div class="text">The popular programming language Python,</div>
+                </div>
+                <div class="mySlides fade">
+                    <img class="Slideshow_Images" src="images/C_Sharp.jpg" alt="C# logo">
+                    <div class="text">I'm available to assist you on your project!</div>
+                </div>
+                <div class="mySlides fade">
+                    <img class="Slideshow_Images" src="images/SQL.jpg" alt="SQL logo">
+                    <div class="text">Back end development, databases and SQL</div>
+                </div>
+                <div class="mySlides fade">
+                    <img class="Slideshow_Images" src="images/me.JPG" alt="Picture of me">
+                    <div class="text"><a class="white-text" onclick="openForm()" href="#Contact">Contact me now!</a></div>
+                </div>
+                <a class="Previous" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="Next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+            <br>
+            <div style="text-align: center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
+            <span class="dot" onclick="currentSlide(6)"></span>
+        </div>
+        </div>
+    </div>
     <!--about section-->
     <div class="Row" id="About">
         <!--left column-->
@@ -54,7 +98,7 @@
             <p> I am a softwar developer who loves code! I enjoy spending time with my dog Moose and traveling
             <br> I am a graduate of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>'s Cyber Security Bootcamp, and trained in??????
             <br>
-            <br>I am ???????? and would love to bring value to a project your team is working on. <a href="#Contact">Contact</a> me below!
+            <br>I am ???????? and would love to bring value to a project your team is working on. <a onclick="openForm()">Contact</a> me below!
             </p>
         </div>
     </div>
@@ -76,24 +120,24 @@
         </div>
     </div>
         <!--contact section-->
-        <div class="Row" id="Contact">
-            <!--contact image, left column-->
-            <div class="Column_2 column_tall">
-                <img src="images/keyboard.jpg" alt="Contact_Image">
-            </div>
-            <!--contact form, right column-->
-            <div class="Column_1 Column_tall">
+        <div id="Contact">
+            <button onclick="openForm()" class="Pop_Up_Button">CONTACT</button>
+            <div class="form-popup" id="myForm">
+                <form action="https://formspree.io/info@learncodinganywhere.com" method="POST" class="form-container">
+            
                 <h1>Contact</h1>
-                <!-- this specifies where and how to send the form data; we are leaving it blank-->
-            <form action="" method="POST"><!--here we are utiliziing a 3rd party service to submit the contact form data, insert your formspree endpoinn the the action atrtribute-->
-                <label>Name:</label>
-                    <input type="text" placeholder="Please enter your name here">
-                <label>Email:</label>
-                    <input type="text" id="email" name="Email" placeholder="Please enter your email here">
-                <label>Message:</label>
-                    <input type="text" id="Message" name="Message" placeholder="Please write your message here">
-                    <input type="submit" value="SUBMIT">
-            </form>
+                <label for="name"><b>Name</b></label>
+                    <input type="text" placeholder="Type your name here" name="name" required>
+                <label for="phone"><b>Phone</b></label>
+                    <input type="text" placeholder="Type your phone number here" name="phone">
+                <label for="email"><b>Email</b></label>
+                    <input type="text" placeholder="Type your email address here" name="email" required>
+                <label for="mesaage"><b>Message</b></label>
+                    <input type="text" placeholder="Type your messeage here" name="message">
+
+                    <button type="submit" class="btn">SUBMIT</button>
+                    <button type="button" class="btn cancel" onclick="closeForm()">CLOSE</button>
+                </form>
             </div>
         </div>
     <!--Footer section-->
@@ -104,6 +148,7 @@
             </p>
         </p>
     </footer>
+    <script src="JS/Sample_Portfolio.js"></script>
 
 </body>
 
