--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!---Body-->
     <body class="background">
         <!--nav bar-->
-        <div class="navbar">
+        <div class="Navbar">
             <a class="active" href="#Home">Home</a>
             <a href="#Slideshow">Slideshow</a>
             <a href="#About">About</a>
