--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
         <!----Head-->
     <head>
+        <meta http-equiv="Content-Security-Policy" 
+        content="script-src 'self' ;">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <title>Richard Bradley</title>
