--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
         <!----Head-->
     <head>
-        <meta http-equiv="Content-Security-Policy" 
-        content="script-src 'self' ;">
+        
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <title>Richard Bradley</title>
@@ -100,7 +99,7 @@
             <p> I am a softwar developer who loves code! I enjoy spending time with my dog Moose and traveling
             <br> I am a graduate of <a href="https://www.learncodinganywhere.com" target="_blank">The Tech Academy</a>'s Cyber Security Bootcamp, and trained in??????
             <br>
-            <br>I am ???????? and would love to bring value to a project your team is working on. <a onclick="openForm()">Contact</a> me below!
+            <br>I am Cybersecurity professional and would love to bring value to a project your team is working on. <a onclick="openForm()">Contact</a> me below!
             </p>
         </div>
     </div>
