--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <input type="text" placeholder="Type your messeage here" name="message">
 
                     <button type="submit" class="btn">SUBMIT</button>
-                    <button type="button" class="btn cancel" onclick="closeForm()">CLOSE</button>
+                    <button type="close" class="btn cancel" onclick="closeForm()">CLOSE</button>
                 </form>
             </div>
         </div>
